# TypeString

./: ;  Colors.hpp  IntString.hpp  LICENSE  Preprocessor.hpp  README.md  StaticString.hpp  TypeString.hpp  TypeStringMacros.hpp  cppstd14.hpp  test.cpp
TypeString/: CMakeLists.txt
TypeString/include/: colordefs.hpp  ct_string.hpp  digits.hpp  fundamental_types.hpp  size_constant.hpp  stl_types.hpp  type_cts.hpp  type_string.hpp  type_string_macros.hpp
TypeString/src/: colordef.hpp  colordefs.hpp  ct_string.hpp  preprocessor.hpp  size_constant.hpp  stl_types.hpp  type_string.hpp
TypeString/test/: CMakeLists.txt  colors.cpp  fundamental.cpp  test_01.cpp
